Added primitive dropdown

--- a/index.html
+++ b/index.html
@@ -10,6 +10,48 @@
 </head>
 <body>
     <div>
+        <label for="categories">Select category:</label>
+        <select name="categ" id="categories">
+            <option value="">structure</option>
+            <option value="">Mounting method</option>
+            <option value="">Fastener</option>
+            <option value="">bearing</option>
+            <option value="">spring</option>
+            <option value="">numbers</option>
+            <option value="">placement</option>
+            <option value="">voids</option>
+            <option value="">shape</option>
+            <option value="">material properties</option>
+            <option value="">optical</option>
+            <option value="">fluid flow</option>
+            <option value="">position</option>
+            <option value="">materials</option>
+            <option value="">electrical</option>
+            <option value="">rotation to translation</option>
+            <option value="">translation to translation</option>
+            <option value="">sequence</option>
+            <option value="">movement</option>
+            <option value="">rotation to rotation</option>
+        </select>
+        <label for="categories">Select category:</label>
+        <select name="categ" id="categories">
+            <option value="">shape</option>
+            <option value="">material</option>
+            <option value="">movement</option>
+            <option value="">function</option>
+            <option value="">relationship</option>
+            <option value="">orientation</option>
+            <option value="">other</option>
+        </select>
+        <label for="categories">Subcategory:</label>
+        <select name="categ" id="form_categories">
+            <option value="">general</option>
+            <option value="">connections & edges</option>
+            <option value="">voids & receptacles</option>
+            <option value="">protrusions</option>
+            <option value="">member</option>
+            <option value="">springs & gears</option>
+        </select>
         <input type="text" id="searchBox" placeholder="search dictionary..." />
         <button onclick="search(document.getElementById('searchBox').value)">search</button>
     </div>
