--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>Document</title>
     <script src='dict.js'></script>
     <script src='main.js'></script>
+    <link rel='stylesheet' href='functional.css' />
 </head>
 <body>
     <div>
-        <label for="categories">Select category:</label>
+        <!-- <label for="categories">Select category:</label>
         <select name="categ" id="categories">
             <option value="">structure</option>
             <option value="">Mounting method</option>
@@ -32,26 +33,19 @@
             <option value="">sequence</option>
             <option value="">movement</option>
             <option value="">rotation to rotation</option>
-        </select>
+        </select> -->
         
-        <select name="categ" id="categories" onchange="getCateg(this)">
+        <select name="categ" id="categ" onchange="getCateg(this)">
             <option value="" selected disabled hidden>Select category</option>
             <option value="shp">shape</option>
             <option value="mat">material</option>
             <option value="mvt">movement</option>
             <option value="fnt">function</option>
             <option value="rtn">relationship</option>
+            <option value="elc">electrical</option>
             <option value="oth">other</option>
         </select>
-        <label for="categories">Subcategory:</label>
-        <select name="categ" id="form_categories">
-            <option value="">general</option>
-            <option value="">connections & edges</option>
-            <option value="">voids & receptacles</option>
-            <option value="">protrusions</option>
-            <option value="">member</option>
-            <option value="">springs & gears</option>
-        </select>
+        <select name="subcateg" id="subcateg" class="banish"></select>
         <input type="text" id="searchBox" placeholder="search dictionary..." />
         <button onclick="search(document.getElementById('searchBox').value)">search</button>
     </div>
