--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='dict.js'></script>
+    <script src='catg.js'></script>
     <script src='main.js'></script>
     <link rel='stylesheet' href='functional.css' />
 </head>
