--- a/index.html
+++ b/index.html
@@ -12,40 +12,30 @@
 </head>
 <body>
     <div>
-        <!-- <label for="categories">Select category:</label>
+        <label for="categories">General & Mechanical terms</label>
         <select name="categ" id="categories">
-            <option value="">structure</option>
-            <option value="">Mounting method</option>
-            <option value="">Fastener</option>
-            <option value="">bearing</option>
-            <option value="">spring</option>
-            <option value="">numbers</option>
-            <option value="">placement</option>
-            <option value="">voids</option>
-            <option value="">shape</option>
-            <option value="">material properties</option>
-            <option value="">optical</option>
-            <option value="">fluid flow</option>
-            <option value="">position</option>
-            <option value="">materials</option>
-            <option value="">electrical</option>
-            <option value="">rotation to translation</option>
-            <option value="">translation to translation</option>
-            <option value="">sequence</option>
-            <option value="">movement</option>
-            <option value="">rotation to rotation</option>
-        </select> -->
-        
-        <select name="categ" id="categ" onchange="getCateg(this)">
-            <option value="" selected disabled hidden>Select category</option>
+            <option value="str">structure</option>
+            <option value="mmt">Mounting method</option>
+            <option value="fst">Fastener</option>
+            <option value="brg">bearing</option>
+            <option value="spr">spring</option>
+            <option value="num">numbers</option>
+            <option value="plc">placement</option>
+            <option value="vds">voids</option>
             <option value="shp">shape</option>
-            <option value="mat">material</option>
+            <option value="map">material properties</option>
+            <option value="opt">optical</option>
+            <option value="fld">fluid flow</option>
+            <option value="pos">position</option>
+            <option value="mat">materials</option>
+            <option value="ele">electrical</option>
+            <option value="rtt">rotation to translation</option>
+            <option value="ttt">translation to translation</option>
+            <option value="seq">sequence</option>
             <option value="mvt">movement</option>
-            <option value="fnt">function</option>
-            <option value="rtn">relationship</option>
-            <option value="elc">electrical</option>
-            <option value="oth">other</option>
+            <option value="rtr">rotation to rotation</option>
         </select>
+        
         <select name="subcateg" id="subcateg" class="banish"></select>
         <input type="text" id="searchBox" placeholder="search dictionary..." />
         <button onclick="search(document.getElementById('searchBox').value)">search</button>
