Added py code for rm repeated words

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src='dict.js'></script>
+    <script src='rm-repeats/output.js'></script>
     <script src='catg.js'></script>
     <script src='main.js'></script>
     <link rel='stylesheet' href='functional.css' />
@@ -34,6 +34,11 @@
             <option value="seq">sequence</option>
             <option value="mvt">movement</option>
             <option value="rtr">rotation to rotation</option>
+            <option value="ext">external</option>
+            <option value="mbr">member</option>
+            <option value="prj">projection</option>
+            <option value="lmt">limit</option>
+            <option value="flg">flang</option>
         </select>
         
         <select name="subcateg" id="subcateg" class="banish"></select>
