Added pg 8 also re-working search logic

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='rm-repeats/output.js'></script>
-    <script src='catg.js'></script>
-    <script src='main.js'></script>
+    <!-- <script src='catg.js'></script>
+    <script src='main.js'></script> -->
+    <script src='dict2.js'></script>
     <link rel='stylesheet' href='functional.css' />
 </head>
 <body>
