Finished new categ struct

--- a/index.html
+++ b/index.html
@@ -40,7 +40,19 @@
             <option value="mbr">member</option>
             <option value="prj">projection</option>
             <option value="lmt">limit</option>
-            <option value="flg">flang</option>
+            <option value="flg">flange</option>
+            <option value="edg">edge</option>
+            <option value="wdg">wedge</option>
+            <option value="pnt">point</option>
+            <option value="slb">slab</option>
+            <option value="sht">sheet</option>
+            <option value="bem">beam</option>
+            <option value="sft">shaft</option>
+            <option value="bg2">more bearings</option>
+            <!-- <option value=""></option>
+            <option value=""></option>
+            <option value=""></option>
+            <option value=""></option> -->
         </select>
         
     </div>
