More words + repo clean up

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='rm-repeats/output.js'></script>
-    <!-- <script src='catg.js'></script>
-    <script src='main.js'></script> -->
+    <script src='catg.js'></script>
+    <script src='main.js'></script>
     <script src='categ2.js'></script>
-    <script src='dict2.js'></script>
     <link rel='stylesheet' href='functional.css' />
 </head>
 <body>
@@ -49,10 +48,10 @@
             <option value="bem">beam</option>
             <option value="sft">shaft</option>
             <option value="bg2">more bearings</option>
-            <!-- <option value=""></option>
+            <option value="plg">plug</option>
+            <option value="gea">gear</option>
             <option value=""></option>
             <option value=""></option>
-            <option value=""></option> -->
         </select>
         
     </div>
