Fixed repeated word script

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='rm-repeats/output.js'></script>
-    <script src='catg.js'></script>
+    <!-- <script src='catg.js'></script> -->
     <script src='main.js'></script>
     <script src='categ2.js'></script>
     <link rel='stylesheet' href='functional.css' />
@@ -50,7 +50,7 @@
             <option value="bg2">more bearings</option>
             <option value="plg">plug</option>
             <option value="gea">gear</option>
-            <option value=""></option>
+            <option value="jws">jaws</option>
             <option value=""></option>
         </select>
         
