--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
             <option value="plg">plug</option>
             <option value="gea">gear</option>
             <option value="jws">jaws</option>
+            <option value="spr">spring again</option>
+            <option value="lft">lift</option>
+            <option value="fbr">fibre</option>
+            <option value="rec">receptacle</option>
             <option value=""></option>
         </select>
         
