--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
             <option value="lft">lift</option>
             <option value="fbr">fibre</option>
             <option value="rec">receptacle</option>
+            <option value="int">interior</option>
+            <option value="tub">tube</option>
+            <option value="ori">orifice</option>
+            <option value="cls">closure</option>
+            <option value="cvr">cover</option>
             <option value=""></option>
         </select>
         
