--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <option value="ori">orifice</option>
             <option value="cls">closure</option>
             <option value="cvr">cover</option>
+            <option value="apd">append</option>
+            <option value="req">relinquish</option>
+            <option value="mst">material structure</option>
             <option value=""></option>
         </select>
         
