--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
             <option value="apd">append</option>
             <option value="req">relinquish</option>
             <option value="mst">material structure</option>
+            <option value="???">unknown</option>
+            <option value="rln">relationship</option>
+            <option value="mv2">movement again</option>
+            <option value="geo">geometric</option>
+            <option value="con">contact</option>
+            <option value=""></option>
             <option value=""></option>
         </select>
         
