--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <option value="mv2">movement again</option>
             <option value="geo">geometric</option>
             <option value="con">contact</option>
-            <option value=""></option>
+            <option value="phy">physical properties</option>
             <option value=""></option>
         </select>
         
