--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src='rm-repeats/output.js'></script>
-    <!-- <script src='catg.js'></script> -->
     <script src='main.js'></script>
-    <script src='categ2.js'></script>
+    <script src='categ.js'></script>
     <link rel='stylesheet' href='functional.css' />
 </head>
 <body>
@@ -69,6 +68,7 @@
             <option value="geo">geometric</option>
             <option value="con">contact</option>
             <option value="phy">physical properties</option>
+            <option value="c2D">2D plane curves</option>
             <option value=""></option>
         </select>
         
