Added search bar + category tags

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             <option value="c2D">2D plane curves</option>
             <option value=""></option>
         </select>
+        <input type="text" placeholder="search for a word" id="input-query" onkeyup="customQuery()">
         
     </div>
     <div id='results'></div>
