Added "3D curves & solids"

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             <option value="con">contact</option>
             <option value="phy">physical properties</option>
             <option value="c2D">2D plane curves</option>
+            <option value="c3D">3D curves and solids</option>
             <option value=""></option>
         </select>
         <input type="text" placeholder="search for a word" id="input-query" onkeyup="customQuery()">
