Glossary is not automatically generated; Added patterns category

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Patent Glossary</title>
     <script src='rm-repeats/output.js'></script>
     <script src='categ.js'></script>
-    <script src='glossary.js'></script>
+    <script src='rm-repeats/generated_glossary.js'></script>
     <script src='main.js'></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -120,6 +120,7 @@
             <option value="phy">physical properties</option>
             <option value="c2D">2D plane curves</option>
             <option value="c3D">3D curves and solids</option>
+            <option value="pats">Patterns, edge and surface </option>
             <option value=""></option>
         </select>
         <input type="text" placeholder="search for a word" id="input-query" onkeyup="customQuery()">
