Added ceiling joists (rm-rpts bugs out on them tho)

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <option value="c3D">3D curves and solids</option>
             <option value="pats">Patterns, edge and surface </option>
             <option value="soi">solids</option>
+            <option value="cei">ceiling</option>
             <!-- <option value=""></option> -->
         </select>
         <input type="text" placeholder="search for a word" id="input-query" onkeyup="customQuery()">
