New dictionary and glossary generator

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patent Glossary</title>
-    <script src='rm-repeats/output.js'></script>
+    <script src='rm-repeats/final_output.js'></script>
     <script src='categ.js'></script>
     <script src='rm-repeats/generated_glossary.js'></script>
     <script src='main.js'></script>
